2017-08-09  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL: Make libssh flavor recommended in Debian install
	prerequisites match the flavor recommended in gvm-libs.

2017-08-04  Michael Wiegand <michael.wiegand@greenbone.net>

	Switch to NEW behavior for CMake policy CMP0005. The policy was
	introduced in CMake 2.6, the OLD behavior is deprecated by definition.
	This means that preprocessor definition values are now escaped
	automatically and no longer have to be escaped to work around
	limitations in earlier CMake versions.

	* CMakeLists.txt: Switch CMake Policy CMP0005 to NEW behavior.

	* misc/CMakeLists.txt, nasl/CMakeLists.txt, src/CMakeLists.txt: Remove
	now superfluous escaping.

2017-08-04  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_socket.c (nasl_socket_cert_verify): Handle case in which
	tls_session is NULL or the certificate type is not x509. Fix documentation
	issue.

2017-08-03  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Function to verify certifactes retrieved from an active socket.

	* nasl/nasl_socket.c (nasl_socket_cert_verify): New function.

	* nasl/nasl_socket.h: Add function prototype.

	* nasl/nasl_init.c (libfuncs): Add socket_cert_verify().

2017-08-03  Michael Wiegand <michael.wiegand@greenbone.net>

	Unify handling of compiler flags to avoid passing the same flag
	multiple times.

	* CMakeLists.txt: Move explanatory comment for flags required by GPGME
	here from nasl/CMakeLists.txt.

	* misc/CMakeLists.txt: Stop setting HARDENING_FLAGS and
	LINKER_HARDENING_FLAGS as they are already set in top-level. Stop
	adding the HARDENING_FLAGS to CMAKE_C_FLAGS_RELEASE a second time,
	they were already added in top-level.

	* nasl/CMakeLists.txt: Stop adding GPGME related flags to
	CMAKE_C_FLAGS, they were already added in top-level. Remove related
	comment as well. Stop adding the HARDENING_FLAGS to
	CMAKE_C_FLAGS_RELEASE a second time, they were already added in
	top-level.
